@@ -1,7 +1,6 @@
 /*
  *  XXX CPU Dependent Source
  *
- *
  *  COPYRIGHT (c) 1989-1999.
  *  On-Line Applications Research Corporation (OAR).
  *
